<resources>
    <string name="app_name">BeLinked</string>
    <string name="loading">Loading..</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_with">Or sign in with</string>
    <string name="forgot_password">Forgot password</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>
    <string name="google_desc">Google Logo</string>
    <string name="twitter_desc">Twitter Logo</string>
    <string name="be_linked_desc">BeLinked Logo</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="terms_and_conditions">By signing up, you are agree with our<a href="">\t\t Terms &amp; \n\t\t\t\t\t\t\t\t\t\t\t\t\t\t Conditions</a></string>
    <string name="organization">Organization</string>
    <string name="student">Student</string>
    <string name="home_menu">Home</string>
    <string name="search_menu">Search</string>
    <string name="profile_menu">Profile</string>
    <string name="notification_menu">Notifications</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_description">Enter description</string>
    <string name="upload">Upload</string>
</resources>