<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_be_linked_logo_activity_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/be_linked_logo"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/be_linked_desc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#1A73E9"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_be_linked_logo_activity_main" />

    <!--    <androidx.constraintlayout.widget.Guideline-->
    <!--        android:id="@+id/horizontal_guide_line"-->
    <!--        android:orientation="horizontal"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintGuide_percent="0.2"/>-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_sign_in_activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sign_in"
        android:textSize="24sp"
        android:textColor="#6C92F4"
        android:backgroundTint="#E6F4FF"/>

    <Button
        android:id="@+id/btn_sign_up_activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="24sp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:textColor="#FFFFFF"
        android:backgroundTint="#1A73E9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in_activity_main"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_sign_in_with_activity_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in_with"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up_activity_main"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>




    <ImageView
        android:id="@+id/img_view_google_activity_main"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/google_logo2"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_with_activity_main"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guide_line"
        android:contentDescription="@string/google_desc"/>


    <ImageView
        android:id="@+id/img_view_twitter_activity_main"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/twitter_logo"
        app:layout_constraintStart_toEndOf="@id/vertical_guide_line"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in_with_activity_main"
        android:contentDescription="@string/twitter_desc"/>



    <!--    <TextView-->
    <!--        android:id="@+id/tv_forgot_password_activity_main"-->
    <!--        android:text="@string/forgot_password"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:textSize="18sp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/img_view_google_activity_main"/>-->

    <!--    <TextView-->
    <!--        android:id="@+id/tv_dont_have_account_activity_main"-->
    <!--        android:text="@string/do_not_have_an_account"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:textSize="18sp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password_activity_main"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"/>-->




</androidx.constraintlayout.widget.ConstraintLayout>