<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/img_be_linked_logo_activity_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/be_linked_logo"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/be_linked_desc" />

    <TextView
        android:id="@+id/tv_be_linked_activity_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#1A73E9"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_be_linked_logo_activity_sign_in" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email_activity_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/email"
        android:layout_marginTop="32dp"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_be_linked_activity_sign_in"
        app:layout_constraintEnd_toEndOf="parent">
        <EditText
            android:id="@+id/et_email_activity_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password_activity_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/password"
        android:layout_marginTop="16dp"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email_activity_sign_in"
        app:layout_constraintEnd_toEndOf="parent">
        <EditText
            android:id="@+id/et_password_activity_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_sing_in_activity_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password_activity_sign_in"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_forgot_password_activity_sing_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sing_in_activity_sign_in"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_do_not_have_an_account_activity_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_not_have_an_account"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password_activity_sing_in"
        app:layout_constraintEnd_toEndOf="parent"/>

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/til"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginHorizontal="16dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        app:boxBackgroundMode="outline"-->
<!--        app:boxCornerRadiusTopEnd="16dp"-->
<!--        app:boxCornerRadiusTopStart="16dp"-->
<!--        app:boxCornerRadiusBottomStart="16dp"-->
<!--        app:boxCornerRadiusBottomEnd="16dp"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:helperText="This is an helper-text"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tv_do_not_have_an_account_activity_sign_in"-->
<!--        app:layout_constraintEnd_toEndOf="parent">-->
<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/tiet"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:inputType="textPassword"-->
<!--            android:hint="Enter your name"/>-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>