<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".organization.PostActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_activity_post"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="32dp"
        app:cardCornerRadius="12dp"
        android:backgroundTint="#DFDFDF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_search_post_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_title"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <EditText
                    android:id="@+id/et_title_activity_post"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_baseline_search_24"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/iv_post_activity_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/design_default_color_primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_search_post_activity"
                app:layout_constraintEnd_toEndOf="parent"
                android:minHeight="200dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_description_activity_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/enter_description"
                android:layout_marginHorizontal="16dp"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                android:minHeight="120dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_post_activity_post"
                app:layout_constraintEnd_toEndOf="parent">
                <EditText
                    android:id="@+id/et_description_activity_post"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine|textCapSentences"
                    android:padding="10dp"
                    android:gravity="start"
                    android:minHeight="120dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_upload_post_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload"
                android:layout_gravity="end"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_description_activity_post"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>